--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "axios": "^1.4.0",
         "cheerio": "^1.0.0-rc.12",
         "fs": "^0.0.1-security",
-        "jest": "^29.6.1"
+        "jest": "^29.6.1",
+        "puppeteer": "^21.1.0"
     }
 }
