--- a/.github/workflows/1_main.yml
+++ b/.github/workflows/1_main.yml
@@ -30,10 +30,19 @@ jobs:
             - name: Run scraper script
               run: node src/main-scraper.js
 
+            # Check if there are changes
+            - name: Check for changes
+              id: check_changes
+              run: |
+                  git diff --exit-code || echo "changes::true" >> $GITHUB_ENV
+              continue-on-error: true
+
+            # Only run the next steps if there were changes
             - name: Commit changes
+              if: env.changes == 'true'
               run: |
                   git config user.name github-actions
                   git config user.email github-actions@github.com
                   git add patch_version.json
-                  git commit -m "Update patch_version.json" || echo "No changes to commit"
+                  git commit -m "Update patch_version.json"
                   git push https://${{secrets.GH_PAT}}@github.com/9kosho/TFT-latest-patch-timestamp.git main
