Add type module to package.json and implement getDataFromUrl function

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "This is a take two.",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "test": "jest"
     },
