Update scraper script command

--- a/.github/workflows/1_main.yml
+++ b/.github/workflows/1_main.yml
@@ -28,7 +28,7 @@ jobs:
               run: npm test
 
             - name: Run scraper script
-              run: node src/main-scraper.js
+              run: npm start
 
             - name: Commit changes
               run: |
