--- a/.github/workflows/1_main.yml
+++ b/.github/workflows/1_main.yml
@@ -1,42 +1,20 @@
-name: Web Scraping Action
+name: 1. Web Scraping Action
 
 on:
-    workflow_dispatch:
+    workflow_dispatch: # Manual trigger
     schedule:
+        # Run every 4 hours
         - cron: "0 */4 * * *"
 
 jobs:
     web_scraping:
         runs-on: ubuntu-latest
-        container:
-            image: node:18
-            options: --init
 
         steps:
             - name: Check out the repository
-              uses: actions/checkout@v3
+              uses: actions/checkout@v2
               with:
                   token: ${{ secrets.GH_PAT }}
-
-            - name: Install Chrome dependencies
-              run: |
-                  apt-get update
-                  apt-get install -y \
-                      libnss3 \
-                      libnspr4 \
-                      libatk1.0-0 \
-                      libatk-bridge2.0-0 \
-                      libcups2 \
-                      libdrm2 \
-                      libxkbcommon0 \
-                      libxcomposite1 \
-                      libxdamage1 \
-                      libxfixes3 \
-                      libxrandr2 \
-                      libgbm1 \
-                      libasound2 \
-                      libpango-1.0-0 \
-                      libcairo2
 
             - name: Set up Node.js
               uses: actions/setup-node@v2
