--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "module",
     "scripts": {
         "start": "node src/main-scraper.js",
+        "start:override": "node src/main-scraper.js --override",
         "test": "jest"
     },
     "repository": {
